--- a/public/index.html
+++ b/public/index.html
@@ -1,89 +1,294 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome to Firebase Hosting</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Warren Library</title>
+    <style>
+      body {
+        font-family: "Arial", sans-serif;
+        margin: 0;
+        padding: 0;
+        background-color: #fff;
+        color: #8b0000;
+      }
 
-    <!-- update the version number as needed -->
-    <script defer src="/__/firebase/10.7.0/firebase-app-compat.js"></script>
-    <!-- include only the Firebase features as you need -->
-    <script defer src="/__/firebase/10.7.0/firebase-auth-compat.js"></script>
-    <script defer src="/__/firebase/10.7.0/firebase-database-compat.js"></script>
-    <script defer src="/__/firebase/10.7.0/firebase-firestore-compat.js"></script>
-    <script defer src="/__/firebase/10.7.0/firebase-functions-compat.js"></script>
-    <script defer src="/__/firebase/10.7.0/firebase-messaging-compat.js"></script>
-    <script defer src="/__/firebase/10.7.0/firebase-storage-compat.js"></script>
-    <script defer src="/__/firebase/10.7.0/firebase-analytics-compat.js"></script>
-    <script defer src="/__/firebase/10.7.0/firebase-remote-config-compat.js"></script>
-    <script defer src="/__/firebase/10.7.0/firebase-performance-compat.js"></script>
-    <!-- 
-      initialize the SDK after all desired features are loaded, set useEmulator to false
-      to avoid connecting the SDK to running emulators.
-    -->
-    <script defer src="/__/firebase/init.js?useEmulator=true"></script>
+      header {
+        background-color: #8b0000;
+        color: #fff;
+        padding: 15px 20px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
 
-    <style media="screen">
-      body { background: #ECEFF1; color: rgba(0,0,0,0.87); font-family: Roboto, Helvetica, Arial, sans-serif; margin: 0; padding: 0; }
-      #message { background: white; max-width: 360px; margin: 100px auto 16px; padding: 32px 24px; border-radius: 3px; }
-      #message h2 { color: #ffa100; font-weight: bold; font-size: 16px; margin: 0 0 8px; }
-      #message h1 { font-size: 22px; font-weight: 300; color: rgba(0,0,0,0.6); margin: 0 0 16px;}
-      #message p { line-height: 140%; margin: 16px 0 24px; font-size: 14px; }
-      #message a { display: block; text-align: center; background: #039be5; text-transform: uppercase; text-decoration: none; color: white; padding: 16px; border-radius: 4px; }
-      #message, #message a { box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); }
-      #load { color: rgba(0,0,0,0.4); text-align: center; font-size: 13px; }
-      @media (max-width: 600px) {
-        body, #message { margin-top: 0; background: white; box-shadow: none; }
-        body { border-top: 16px solid #ffa100; }
+      .logo {
+        display: flex;
+        align-items: center;
+      }
+
+      .logo img {
+        height: 60px;
+        margin-right: 10px;
+      }
+
+      .library-name {
+        font-size: 24px;
+        font-weight: bold;
+        color: #fff;
+        display: inline-block;
+        padding: 0 10px;
+      }
+
+      /* Your existing styles here */
+
+      /* Additional styles for the register section */
+      .login-register-section {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 20px auto; /* Center the box */
+        background-image: url("Ashesi_Campus.jpeg");
+        /* background-repeat: no-repeat; */
+        /* background-size: cover; */
+        background-position: center;
+      }
+
+      .login-form {
+        display: flex;
+        flex-direction: column;
+        width: 500px;
+        margin: 10px;
+        background-color: #fff; /* Gray background */
+        padding: 40px;
+        border-radius: 15px;
+        margin-top: 2%;
+      }
+
+      .form-group {
+        margin-bottom: 15px;
+      }
+
+      .form-group label {
+        font-size: 14px;
+        margin-bottom: 100px;
+      }
+
+      .form-group input,
+      .form-group select {
+        padding: 10px;
+        border: 1px solid #8b0000;
+        border-radius: 5px;
+      }
+
+      button {
+        background-color: #8b0000; /* Red wine background */
+        color: #fff;
+        padding: 10px 10% 10px 10%;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        margin-top: 20px;
+      }
+
+      .Register-link {
+        margin-top: 20px;
+        text-align: center;
+        color: #000; /* Change text color to black */
+      }
+
+      .Register-link a,
+      .Register-link a:visited {
+        color: #8b0000;
+      }
+
+      /* Additional styles for the contact button */
+      .contact-button {
+        background-color: #8b0000;
+        color: #fff;
+        padding: 10px 15px;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+      }
+
+      input {
+        width: 100%;
+      }
+
+      .btn-container {
+        /* display: flex; */
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        margin-top: 20px; /* Adjust the margin as needed */
+        background-color: redwine; /* Initial background color */
+        color: white; /* Initial text color */
+        transition: background-color 0.3s ease, color 0.3s ease; /* Add a smooth transition effect */
+      }
+
+      button:hover {
+        background-color: white; /* New background color on hover */
+        color: #8b0000ed; /* New text color on hover */
+        transition: 0.5s ease;
+      }
+      @media only screen and (max-width: 918px) {
+        .contact-button {
+          color: black;
+        }
       }
     </style>
   </head>
   <body>
-    <div id="message">
-      <h2>Welcome</h2>
-      <h1>Firebase Hosting Setup Complete</h1>
-      <p>You're seeing this because you've successfully setup Firebase Hosting. Now it's time to go build something extraordinary!</p>
-      <a target="_blank" href="https://firebase.google.com/docs/hosting/">Open Hosting Documentation</a>
+    <header>
+      <div class="logo">
+        <img src="./Resources/ashesi-logo.png" alt="Ashesi Logo" />
+        <div class="library-name">Warren Library Register Page</div>
+      </div>
+      <button class="contact-button">Contact Us</button>
+    </header>
+    <div class="login-register-section">
+      <div class="login-form">
+        <h2>Login</h2>
+        <div class="form-group">
+          <label for="userType">Login as:</label>
+          <select id="userType">
+            <option value="admin">Admin</option>
+            <option value="librarian">Librarian</option>
+            <!-- <option value="Student">Student</option>
+            <option value="staff">Staff/Faculty</option>
+            <option value="facultyIntern">Faculty Intern</option> -->
+          </select>
+        </div>
+        <div class="form-group">
+          <label for="email">Email:</label>
+          <input type="email" id="email" placeholder="Enter your email" />
+        </div>
+        <div class="form-group">
+          <label for="password">ID Number or Admin Password:</label>
+          <input
+            type="password"
+            id="password"
+            placeholder="Enter your ID Number or Admin Password"
+          />
+        </div>
+        <div class="btn-container">
+          <button onclick="Login()">Login</button>
+        </div>
+
+        <div class="Register-link">
+          <p>You have no account? <a href="#">Register here!</a></p>
+          <a href="#" class="forgot-password">Forgot Password?</a>
+        </div>
+      </div>
     </div>
-    <p id="load">Firebase SDK Loading&hellip;</p>
+
+    <script src="https://www.gstatic.com/firebasejs/8.3.2/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.3.2/firebase-database.js"></script>
 
     <script>
-      document.addEventListener('DOMContentLoaded', function() {
-        const loadEl = document.querySelector('#load');
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
-        // // The Firebase SDK is initialized and available here!
-        //
-        // firebase.auth().onAuthStateChanged(user => { });
-        // firebase.database().ref('/path/to/ref').on('value', snapshot => { });
-        // firebase.firestore().doc('/foo/bar').get().then(() => { });
-        // firebase.functions().httpsCallable('yourFunction')().then(() => { });
-        // firebase.messaging().requestPermission().then(() => { });
-        // firebase.storage().ref('/path/to/ref').getDownloadURL().then(() => { });
-        // firebase.analytics(); // call to activate
-        // firebase.analytics().logEvent('tutorial_completed');
-        // firebase.performance(); // call to activate
-        //
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
+      function setCookie(name, value, days) {
+        const expires = new Date();
+        expires.setTime(expires.getTime() + days * 24 * 60 * 60 * 1000);
+        document.cookie = `${name}=${value};expires=${expires.toUTCString()};path=/`;
+      }
+      const firebaseConfig = {
+        apiKey: "AIzaSyCzSMSm6ZHGoLGA7AToiIMHByDFz9yIIbk",
+        authDomain: "ashesilibraryesp32-fd5b8.firebaseapp.com",
+        databaseURL:
+          "https://ashesilibraryesp32-fd5b8-default-rtdb.firebaseio.com",
+        projectId: "ashesilibraryesp32-fd5b8",
+        storageBucket: "ashesilibraryesp32-fd5b8.appspot.com",
+        messagingSenderId: "185836313770",
+        appId: "1:185836313770:web:ff9137a24273f2ed0844d3",
+        measurementId: "G-J8PWV52BJE",
+      };
 
-        try {
-          let app = firebase.app();
-          let features = [
-            'auth', 
-            'database', 
-            'firestore',
-            'functions',
-            'messaging', 
-            'storage', 
-            'analytics', 
-            'remoteConfig',
-            'performance',
-          ].filter(feature => typeof app[feature] === 'function');
-          loadEl.textContent = `Firebase SDK loaded with ${features.join(', ')}`;
-        } catch (e) {
-          console.error(e);
-          loadEl.textContent = 'Error loading the Firebase SDK, check the console.';
+      firebase.initializeApp(firebaseConfig);
+      const database = firebase.database();
+
+      function Login() {
+        const userType = document.getElementById("userType").value;
+        const email = document.getElementById("email").value;
+        const password = document.getElementById("password").value;
+        document.cookie = `password=${email}; expires=Thu, 31 Dec 2099 23:59:59 UTC; path=/`;
+
+        if (
+          userType === "admin" &&
+          email === "admin@ashesi.edu.gh" &&
+          password === "admin1234"
+        ) {
+          console.log("Admin login successful");
+          //   AshesiLibraryESP32\HTML\admin.html
+          window.open("admin.html", "_blank");
+        } else if (userType === "Student") {
+          const userTypes = ["Student"];
+          userTypes.forEach((userType) => {
+            database
+              .ref(`${userType}s`)
+              .once("value")
+              .then((snapshot) => {
+                snapshot.forEach((user) => {
+                  const userData = user.val();
+                  if (userData.email === email && user.key === password) {
+                    window.location.href = "student.html";
+                  }
+                });
+              });
+          });
+        } else if (userType === "staff") {
+          const userTypes = ["StaffFaculty"];
+          userTypes.forEach((userType) => {
+            database
+              .ref(`${userType}s`)
+              .once("value")
+              .then((snapshot) => {
+                snapshot.forEach((user) => {
+                  const userData = user.val();
+                  if (userData.email === email && user.key === password) {
+                    window.location.href = "Faculty.html";
+                  }
+                });
+              });
+          });
+        } else if (userType === "facultyIntern") {
+          const userTypes = ["FacultyIntern"];
+          userTypes.forEach((userType) => {
+            database
+              .ref(`${userType}s`)
+              .once("value")
+              .then((snapshot) => {
+                snapshot.forEach((user) => {
+                  const userData = user.val();
+                  if (userData.email === email && user.key === password) {
+                    window.location.href = "FacultyIntern.html";
+                  }
+                });
+              });
+          });
+        } else if (userType === "librarian") {
+          const userTypes = ["Librarian"];
+          userTypes.forEach((userType) => {
+            database
+              .ref(`${userType}s`)
+              .once("value")
+              .then((snapshot) => {
+                snapshot.forEach((user) => {
+                  const userData = user.val();
+                  if (userData.email === email && user.key === password) {
+                    setCookie("librarianPassword", email, 1); // Change the expiration time as needed
+
+                    window.location.href = "Librarian.html";
+                  }
+                });
+              });
+          });
+        } else {
+          alert("Invalid email or password");
         }
-      });
+      }
     </script>
   </body>
 </html>
