--- a/AshesiLibraryESP32/HTML/Userlogin.html
+++ b/AshesiLibraryESP32/HTML/Userlogin.html
@@ -28,8 +28,8 @@
       }
 
       .logo img {
-        height: 60px;
-        margin-right: 10px;
+        height: 45px;
+        margin-right: 2px;
       }
 
       .library-name {
@@ -110,6 +110,7 @@
         border: none;
         border-radius: 5px;
         cursor: pointer;
+        margin-top: 0%;
       }
 
       input {
@@ -134,9 +135,49 @@
         color: #8b0000ed; /* New text color on hover */
         transition: 0.5s ease;
       }
+
       @media only screen and (max-width: 918px) {
+        .form-group input { 
+          padding: 10px;
+        border: 1px solid #8B0000;
+        border-radius: 5px;
+        width: 50%; /* Adjust the width of input/select boxes */
+        margin-bottom: 10px;
+        }
+        .form-group select { 
+          padding: 10px;
+          border: 1px solid #8B0000;
+          border-radius: 5px;
+          width: 25%; /* Adjust the width of input/select boxes */
+          margin-bottom: 10px;
+        }
+        .form-group {
+          display: flex;
+          flex-direction: column;
+          padding-left: 20%; /* Adjust the left padding to reduce space */
+        }
+        .form-group label {
+          font-size: 14px;
+          margin-bottom: 25px;
+        }
+        h2 {
+          padding-left: 15%;
+        }
+        .logo img{
+          display: none;
+        }
+        .login-form {
+          overflow: hidden;
+          padding: 0px;
+        }
+
         .contact-button {
-          color: black;
+          background-color: #8b0000;
+          color: #fff;
+          padding: 0px 17px;
+          border: none;
+          border-radius: 5px;
+          margin-top: 0%;
         }
       }
     </style>
@@ -165,13 +206,14 @@
         </div>
         <div class="form-group">
           <label for="email">Email:</label>
-          <input type="email" id="email" placeholder="Enter your email" />
+          <input type="email" id="email" pattern="^[a-zA-Z0-9._%+-]+@ashesi\.edu\.gh$" placeholder="Enter your email" />
         </div>
         <div class="form-group">
           <label for="password">ID Number or Admin Password:</label>
           <input
             type="password"
             id="password"
+            pattern="^\d{8}$"
             placeholder="Enter your ID Number or Admin Password"
           />
         </div>
