--- a/public/index.html
+++ b/public/index.html
@@ -144,7 +144,10 @@
   <body>
     <header>
       <div class="logo">
-        <img src="./Resources/ashesi-logo.png" alt="Ashesi Logo" />
+        <img
+          src="../AshesiLibraryESP32/Resources/ashesi-logo.png"
+          alt="Ashesi Logo"
+        />
         <div class="library-name">Warren Library Register Page</div>
       </div>
       <button class="contact-button">Contact Us</button>
