--- a/public/HTML/index1.html
+++ b/public/HTML/index1.html
@@ -91,7 +91,7 @@
         appId: "1:185836313770:web:ff9137a24273f2ed0844d3",
         measurementId: "G-J8PWV52BJE",
       };
-
+      devicePixelRatio;
       firebase.initializeApp(firebaseConfig);
       const database = firebase.database();
 
