--- a/public/HTML/admin.html
+++ b/public/HTML/admin.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="../Resources/OIP.jpeg" sizes="32x32" />
+
     <title>Ashesi Koha Library Management System</title>
     <style>
       body {
