--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Warren Library</title>
+    <link rel="icon" href="./Resources/OIP.jpeg" sizes="32x32" />
+
     <style>
       body {
         font-family: "Arial", sans-serif;
@@ -160,9 +162,9 @@
           <select id="userType">
             <option value="admin">Admin</option>
             <option value="librarian">Librarian</option>
-            <!-- <option value="Student">Student</option>
+            <option value="Student">Student</option>
             <option value="staff">Staff/Faculty</option>
-            <option value="facultyIntern">Faculty Intern</option> -->
+            <option value="facultyIntern">Faculty Intern</option>
           </select>
         </div>
         <div class="form-group">
@@ -181,10 +183,10 @@
           <button onclick="Login()">Login</button>
         </div>
 
-        <div class="Register-link">
+        <!-- <div class="Register-link">
           <p>You have no account? <a href="#">Register here!</a></p>
           <a href="#" class="forgot-password">Forgot Password?</a>
-        </div>
+        </div> -->
       </div>
     </div>
 
@@ -193,6 +195,21 @@
 
     <script>
       function setCookie(name, value, days) {
+        const expires = new Date();
+        expires.setTime(expires.getTime() + days * 24 * 60 * 60 * 1000);
+        document.cookie = `${name}=${value};expires=${expires.toUTCString()};path=/`;
+      }
+      function setCookie2(name, value, days) {
+        const expires = new Date();
+        expires.setTime(expires.getTime() + days * 24 * 60 * 60 * 1000);
+        document.cookie = `${name}=${value};expires=${expires.toUTCString()};path=/`;
+      }
+      function setCookie3(name, value, days) {
+        const expires = new Date();
+        expires.setTime(expires.getTime() + days * 24 * 60 * 60 * 1000);
+        document.cookie = `${name}=${value};expires=${expires.toUTCString()};path=/`;
+      }
+      function setCookie4(name, value, days) {
         const expires = new Date();
         expires.setTime(expires.getTime() + days * 24 * 60 * 60 * 1000);
         document.cookie = `${name}=${value};expires=${expires.toUTCString()};path=/`;
@@ -216,7 +233,7 @@
         const userType = document.getElementById("userType").value;
         const email = document.getElementById("email").value;
         const password = document.getElementById("password").value;
-        document.cookie = `password=${email}; expires=Thu, 31 Dec 2099 23:59:59 UTC; path=/`;
+        document.cookie = `email=${email}; expires=Thu, 31 Dec 2099 23:59:59 UTC; path=/`;
 
         if (
           userType === "admin" &&
@@ -225,7 +242,7 @@
         ) {
           console.log("Admin login successful");
           //   AshesiLibraryESP32\HTML\admin.html
-          window.open("admin.html", "_blank");
+          window.open("./HTML/admin.html", "_blank");
         } else if (userType === "Student") {
           const userTypes = ["Student"];
           userTypes.forEach((userType) => {
@@ -236,7 +253,7 @@
                 snapshot.forEach((user) => {
                   const userData = user.val();
                   if (userData.email === email && user.key === password) {
-                    window.location.href = "student.html";
+                    window.location.href = "./HTML/student.html";
                   }
                 });
               });
@@ -251,7 +268,10 @@
                 snapshot.forEach((user) => {
                   const userData = user.val();
                   if (userData.email === email && user.key === password) {
-                    window.location.href = "Faculty.html";
+                    setCookie3("studentEmail", email, 1); // Change the expiration time as needed
+                    setCookie4("studentPassword", password, 1); // Change the expiration time as needed
+
+                    window.location.href = "./HTML/Faculty.html";
                   }
                 });
               });
@@ -266,7 +286,7 @@
                 snapshot.forEach((user) => {
                   const userData = user.val();
                   if (userData.email === email && user.key === password) {
-                    window.location.href = "FacultyIntern.html";
+                    window.location.href = "./HTML/FacultyIntern.html";
                   }
                 });
               });
@@ -281,9 +301,10 @@
                 snapshot.forEach((user) => {
                   const userData = user.val();
                   if (userData.email === email && user.key === password) {
-                    setCookie("librarianPassword", email, 1); // Change the expiration time as needed
+                    setCookie("librarianEmail", email, 1); // Change the expiration time as needed
+                    setCookie2("librarianPassword", password, 1); // Change the expiration time as needed
 
-                    window.location.href = "Librarian.html";
+                    window.location.href = "./HTML/Librarian.html";
                   }
                 });
               });
